--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-datepicker": "^1.2.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "reactstrap": "^5.0.0-beta",
     "redux": "^3.7.2"
   },
   "scripts": {
