--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
     "moment": "^2.20.1",
+    "popper.js": "^1.14.1",
     "react": "^16.2.0",
     "react-datepicker": "^1.2.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "reactstrap": "^5.0.0-beta",
     "redux": "^3.7.2"
   },
   "scripts": {
