--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "0.0.17",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "jest-cli": "^22.4.3",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "popper.js": "^1.14.1",
@@ -25,5 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
